fix horizontal scroll direction

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -41,7 +41,7 @@ body {
 }
 
 .horizontal-scroll {
-	overflow-y: scroll;
+	overflow-x: scroll;
 }
 
 .close-tab.btn {
